--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ body {font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
 <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-firestore-compat.js"></script>
 <script>
-console.log('%c[CHAT] Inicjalizacja...', 'color: #10b981; font-weight: bold');
+console.log('%c[CHAT] Inicjalizacja v2.1...', 'color: #10b981; font-weight: bold');
 
 // PWA Install
 if('serviceWorker'in navigator){
@@ -209,21 +209,19 @@ window.addEventListener('beforeinstallprompt',e=>{
   if(p)p.style.display='block'
 });
 
-function installApp(){
+window.installApp = function(){
   const p=document.getElementById('installPrompt');
   if(p)p.style.display='none';
   if(deferredPrompt){
     deferredPrompt.prompt();
     deferredPrompt.userChoice.then(r=>{deferredPrompt=null})
   }
-}
-window.installApp = installApp;
+};
 
-function dismissInstall(){
+window.dismissInstall = function(){
   const p=document.getElementById('installPrompt');
   if(p)p.style.display='none'
-}
-window.dismissInstall = dismissInstall;
+};
 
 // Firebase Config
 const firebaseConfig={
@@ -245,7 +243,6 @@ try {
   d = firebase.firestore();
   console.log('%c[Firebase] ✓ Załadowano pomyślnie', 'color: #10b981');
   
-  // Update status indicator
   const statusEl = document.getElementById('firebaseStatus');
   if(statusEl) {
     statusEl.innerHTML = '&#10003; Połączono';
@@ -287,8 +284,11 @@ function escapeHtml(text){const div=document.createElement('div');div.textConten
 
 function scrollToBottom(){const md=document.getElementById('ms');if(md)setTimeout(function(){md.scrollTop=md.scrollHeight},50)}
 
-function toggleEmoji(){const ep=document.getElementById('ep');if(!ep)return;if(es){ep.classList.add('p');es=false}else{const eg=document.getElementById('eg');if(!eg.innerHTML)ie();ep.classList.remove('p');es=true}}
-window.toggleEmoji = toggleEmoji;
+window.toggleEmoji = function(){
+  const ep=document.getElementById('ep');
+  if(!ep)return;
+  if(es){ep.classList.add('p');es=false}else{const eg=document.getElementById('eg');if(!eg.innerHTML)ie();ep.classList.remove('p');es=true}
+};
 
 function ie(){const eg=document.getElementById('eg');if(!eg)return;eg.innerHTML='';emojis.forEach(function(emoji){const btn=document.createElement('button');btn.className='gg';btn.textContent=emoji;btn.onclick=function(e){e.stopPropagation();ae(emoji)};eg.appendChild(btn)})}
 
@@ -296,20 +296,69 @@ function ae(emoji){const mi=document.getElementById('mi');if(!mi)return;mi.value
 
 async function markAsRead(messageId,sender){if(!cu||!messageId||sender===cu.email)return;try{await d.collection('messages').doc(messageId).update({readAt:firebase.firestore.FieldValue.serverTimestamp(),readBy:cu.email})}catch(e){console.log('[MarkRead] Error:',e)}}
 
-async function deleteMessage(messageId){if(!messageId)return;if(!confirm('Czy na pewno chcesz usunąć tę wiadomość?'))return;try{const msgEl=document.querySelector('[data-msg-id="'+messageId+'"]');if(msgEl)msgEl.classList.add('msg-deleting');await d.collection('messages').doc(messageId).delete();setTimeout(function(){if(msgEl&&msgEl.parentNode)msgEl.remove();messageIds.delete(messageId)},300);showToast('Sukces','Wiadomość usunięta','success')}catch(error){console.error('[Delete] Error:',error);showToast('Błąd','Nie udało się usunąć','error')}}
-window.deleteMessage = deleteMessage;
+window.deleteMessage = async function(messageId){
+  if(!messageId)return;
+  if(!confirm('Czy na pewno chcesz usunąć tę wiadomość?'))return;
+  try{
+    const msgEl=document.querySelector('[data-msg-id="'+messageId+'"]');
+    if(msgEl)msgEl.classList.add('msg-deleting');
+    await d.collection('messages').doc(messageId).delete();
+    setTimeout(function(){if(msgEl&&msgEl.parentNode)msgEl.remove();messageIds.delete(messageId)},300);
+    showToast('Sukces','Wiadomość usunięta','success')
+  }catch(error){
+    console.error('[Delete] Error:',error);
+    showToast('Błąd','Nie udało się usunąć','error')
+  }
+};
 
 function ci(file,maxWidth,quality){maxWidth=maxWidth||800;quality=quality||0.8;return new Promise(function(resolve){const canvas=document.createElement('canvas');const ctx=canvas.getContext('2d');const img=new Image();img.onload=function(){let width=img.width;let height=img.height;if(width>height){if(width>maxWidth){height*=maxWidth/width;width=maxWidth}}else{if(height>maxWidth){width*=maxWidth/height;height=maxWidth}}canvas.width=width;canvas.height=height;ctx.drawImage(img,0,0,width,height);canvas.toBlob(resolve,'image/jpeg',quality)};img.src=URL.createObjectURL(file)})}
 
-async function hu(input){const file=input.files[0];if(!file)return;if(!file.type.startsWith('image/')){showToast('Błąd','Wybierz plik obrazu','error');return}try{let compressedFile=file;if(file.size>1024*1024)compressedFile=await ci(file,600,0.7);const reader=new FileReader();reader.onload=function(e){const base64=e.target.result;const img=document.createElement('img');img.src=base64;img.className='hh';img.onclick=function(){oi(base64)};const wrapper=document.createElement('div');wrapper.className='ii';const removeBtn=document.createElement('button');removeBtn.className='jj';removeBtn.innerHTML='&times;';removeBtn.onclick=function(ev){ev.stopPropagation();wrapper.remove()};wrapper.appendChild(img);wrapper.appendChild(removeBtn);const container=document.getElementById('imagePreviewContainer');container.appendChild(wrapper)};reader.readAsDataURL(compressedFile)}catch(error){showToast('Błąd','Błąd przetwarzania','error')}input.value=''}
-window.hu = hu;
+window.hu = async function(input){
+  const file=input.files[0];
+  if(!file)return;
+  if(!file.type.startsWith('image/')){showToast('Błąd','Wybierz plik obrazu','error');return}
+  try{
+    let compressedFile=file;
+    if(file.size>1024*1024)compressedFile=await ci(file,600,0.7);
+    const reader=new FileReader();
+    reader.onload=function(e){
+      const base64=e.target.result;
+      const img=document.createElement('img');
+      img.src=base64;
+      img.className='hh';
+      img.onclick=function(){oi(base64)};
+      const wrapper=document.createElement('div');
+      wrapper.className='ii';
+      const removeBtn=document.createElement('button');
+      removeBtn.className='jj';
+      removeBtn.innerHTML='&times;';
+      removeBtn.onclick=function(ev){ev.stopPropagation();wrapper.remove()};
+      wrapper.appendChild(img);
+      wrapper.appendChild(removeBtn);
+      const container=document.getElementById('imagePreviewContainer');
+      container.appendChild(wrapper)
+    };
+    reader.readAsDataURL(compressedFile)
+  }catch(error){
+    showToast('Błąd','Błąd przetwarzania','error')
+  }
+  input.value=''
+};
 
-function oi(src){const modal=document.createElement('div');modal.style.cssText='position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.95);display:flex;align-items:center;justify-content:center;z-index:10000;cursor:pointer';const img=document.createElement('img');img.src=src;img.style.cssText='max-width:90%;max-height:90%;border-radius:8px';modal.appendChild(img);modal.onclick=function(){modal.remove()};document.body.appendChild(modal)}
-window.oi = oi;
+window.oi = function(src){
+  const modal=document.createElement('div');
+  modal.style.cssText='position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.95);display:flex;align-items:center;justify-content:center;z-index:10000;cursor:pointer';
+  const img=document.createElement('img');
+  img.src=src;
+  img.style.cssText='max-width:90%;max-height:90%;border-radius:8px';
+  modal.appendChild(img);
+  modal.onclick=function(){modal.remove()};
+  document.body.appendChild(modal)
+};
 
 function sam(m,ie){const dv=document.getElementById('am');dv.innerHTML=ie?'<div class="x">'+escapeHtml(m)+'</div>':'<div class="y">'+escapeHtml(m)+'</div>';setTimeout(function(){dv.innerHTML=''},5000)}
 
-async function lg(){
+window.lg = async function(){
   console.log('%c[Login] Rozpoczynam logowanie...', 'color: #2563eb; font-weight: bold');
   
   const e=document.getElementById('em').value.trim();
@@ -346,7 +395,6 @@ async function lg(){
     console.error('%c[Login] ✗ BŁĄD:', 'color: #ef4444; font-weight: bold');
     console.error('[Login] Code:', er.code);
     console.error('[Login] Message:', er.message);
-    console.error('[Login] Full error:', er);
     
     let msg='Błąd logowania';
     
@@ -372,10 +420,9 @@ async function lg(){
     loginBtn.disabled=false;
     loginBtn.textContent='Zaloguj się'
   }
-}
-window.lg = lg; // ✅ NAPRAWIONE - funkcja dostępna globalnie!
+};
 
-async function rg(){
+window.rg = async function(){
   console.log('[Register] Rozpoczynam rejestrację...');
   
   const e=document.getElementById('em').value.trim();
@@ -419,11 +466,29 @@ async function rg(){
     regBtn.disabled=false;
     regBtn.textContent='Utwórz konto'
   }
-}
-window.rg = rg; // ✅ NAPRAWIONE - funkcja dostępna globalnie!
+};
 
-async function lo(){try{if(ht)clearInterval(ht);if(um)um();await suo(false);await a.signOut();cu=null;sc=null;unread={};encryptionKey=null;messageIds.clear();document.getElementById('ma').classList.add('p');document.getElementById('lf').classList.remove('p');document.getElementById('em').value='';document.getElementById('pw').value='';showToast('Wylogowano','Do zobaczenia!','success')}catch(error){console.error('[Logout] Error:',error);showToast('Błąd','Błąd wylogowania','error')}}
-window.lo = lo;
+window.lo = async function(){
+  try{
+    if(ht)clearInterval(ht);
+    if(um)um();
+    await suo(false);
+    await a.signOut();
+    cu=null;
+    sc=null;
+    unread={};
+    encryptionKey=null;
+    messageIds.clear();
+    document.getElementById('ma').classList.add('p');
+    document.getElementById('lf').classList.remove('p');
+    document.getElementById('em').value='';
+    document.getElementById('pw').value='';
+    showToast('Wylogowano','Do zobaczenia!','success')
+  }catch(error){
+    console.error('[Logout] Error:',error);
+    showToast('Błąd','Błąd wylogowania','error')
+  }
+};
 
 function su(ue,io){document.querySelectorAll('.g').forEach(function(i){i.classList.remove('active')});const userEl=document.querySelector('[data-email="'+ue+'"]');if(userEl)userEl.classList.add('active');sc=ue;unread[ue]=0;uur();const un=ue.split('@')[0];document.getElementById('ct').textContent=un;const cs=document.getElementById('cs');cs.innerHTML=io?'<span style="color:#10b981;display:flex;align-items:center"><span class="j online" style="margin-right:5px"></span>Online</span>':'<span style="color:#6b7280;display:flex;align-items:center"><span class="j offline" style="margin-right:5px"></span>Offline</span>';document.getElementById('mis').classList.remove('p');const kkElements=document.querySelectorAll('.kk');if(kkElements.length>0)kkElements[0].classList.remove('p');lm(ue)}
 
@@ -437,8 +502,28 @@ async function ddm(dt){const md=document.getElementById('ms');const qElement=md.
 
 function cci(e1,e2){return[e1,e2].sort().join('_')}
 
-async function sm(){const mi=document.getElementById('mi');const msg=mi.value.trim();const imgs=document.querySelectorAll('.ii img');if(!msg&&imgs.length===0)return;if(!sc){showToast('Błąd','Wybierz rozmówcę','error');return}try{const ci=cci(cu.email,sc);if(msg){const encryptedMsg=await ec(msg);await d.collection('messages').add({chatId:ci,sender:cu.email,text:encryptedMsg,timestamp:firebase.firestore.FieldValue.serverTimestamp(),readAt:null,readBy:null})}for(let i=0;i<imgs.length;i++){await d.collection('messages').add({chatId:ci,sender:cu.email,image:imgs[i].src,timestamp:firebase.firestore.FieldValue.serverTimestamp(),readAt:null,readBy:null})}mi.value='';document.getElementById('imagePreviewContainer').innerHTML=''}catch(error){console.error('[Send] Error:',error);showToast('Błąd','Błąd wysyłania','error')}}
-window.sm = sm;
+window.sm = async function(){
+  const mi=document.getElementById('mi');
+  const msg=mi.value.trim();
+  const imgs=document.querySelectorAll('.ii img');
+  if(!msg&&imgs.length===0)return;
+  if(!sc){showToast('Błąd','Wybierz rozmówcę','error');return}
+  try{
+    const ci=cci(cu.email,sc);
+    if(msg){
+      const encryptedMsg=await ec(msg);
+      await d.collection('messages').add({chatId:ci,sender:cu.email,text:encryptedMsg,timestamp:firebase.firestore.FieldValue.serverTimestamp(),readAt:null,readBy:null})
+    }
+    for(let i=0;i<imgs.length;i++){
+      await d.collection('messages').add({chatId:ci,sender:cu.email,image:imgs[i].src,timestamp:firebase.firestore.FieldValue.serverTimestamp(),readAt:null,readBy:null})
+    }
+    mi.value='';
+    document.getElementById('imagePreviewContainer').innerHTML=''
+  }catch(error){
+    console.error('[Send] Error:',error);
+    showToast('Błąd','Błąd wysyłania','error')
+  }
+};
 
 async function suo(io){if(!cu)return;try{const ur=d.collection('users').doc(cu.uid);await ur.set({email:cu.email,isOnline:io,lastSeen:firebase.firestore.FieldValue.serverTimestamp()},{merge:true})}catch(error){console.error('[Status] Error:',error)}}
 
@@ -475,7 +560,9 @@ a.onAuthStateChanged(async function(u){
 
 document.addEventListener('visibilitychange',function(){if(cu){if(document.hidden)suo(false);else{suo(true);if(sc){unread[sc]=0;uur()}}}});
 
-console.log('%c[CHAT] ✓ Załadowano pomyślnie', 'color: #10b981; font-weight: bold');
+console.log('%c[CHAT] ✓ Załadowano pomyślnie v2.1', 'color: #10b981; font-weight: bold');
+console.log('%c[DEBUG] window.lg =', 'color: #f59e0b', typeof window.lg);
+console.log('%c[DEBUG] window.rg =', 'color: #f59e0b', typeof window.rg);
 </script>
 </body>
 </html>
